# fourier-circles-synth

./: .gitignore  CMakeLists.txt  README.md
scripts/: demo_script.py  my_dft_imp.py  mytest.py  signalgen.py
src/: AnimationTutorial.h  AnimationTutorial_01.h  CMakeLists.txt  main.cpp
src/gui/: FourierCircle.cpp  FourierCircle.h  Harmonics.cpp  Harmonics.h  SpectrumAnalyserComponent.h  SpectrumAnalyserWindow.cpp  SpectrumAnalyserWindow.h
tests/: myTests.cpp  tests.cpp
